--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -22,84 +22,33 @@
 </head>
 <body>
 
-<style>
-
-	/* Style for our header texts
-	* --------------------------------------- */
-
-	body {
-		background: #333;
-	}
-	h1{
-		font-size: 5em;
-		font-family: arial,helvetica;
-		color: #fff;
-		margin:0;
-		padding:0;
-	}
-
-	/* Centered texts in each section
-	* --------------------------------------- */
-	.section{
-		text-align:center;
-	}
-
-
-	/* Backgrounds will cover all the section
-	* --------------------------------------- */
-	.section{
-		background-size: cover;
-	}
-	.slide{
-		background-size: cover;
-	}
-
-	/* Defining each section background and styles
-	* --------------------------------------- */
-	#section0{
-		background-image: url(img/bg1.jpg);
-		padding: 30% 0 0 0;
-	}
-	#section2{
-		background-image: url(img/bg3.jpg);
-		padding: 6% 0 0 0;
-	}
-	#section3{
-		background-image: url(img/bg4.jpg);
-		padding: 6% 0 0 0;
-	}
-	#section3 h1{
-		color: #000;
-	}
-
-
-	/*Adding background for the slides
-    * --------------------------------------- */
-	#slide1{
-		background-image: url(img/bg2.jpg);
-		padding: 6% 0 0 0;
-	}
-	#slide2{
-		background-image: url(img/bg5.jpg);
-		padding: 6% 0 0 0;
-	}
-
-
-	/* Bottom menu
-	* --------------------------------------- */
-	#infoMenu li a {
-		color: #fff;
-	}
-</style>
-
 <div id="fullpage">
-	<div class="section " id="section0"><h1>fullPage.js</h1></div>
-	<div class="section" id="section1">
-		<div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
-		<div class="slide" id="slide2"><h1>Totally customizable</h1></div>
+	<div class="section " id="section0">
+		<h1>Project Big Book</h1>
+		<img src="img/bg1.jpg" alt=""/>
 	</div>
-	<div class="section" id="section2"><h1>Lovely images <br />for a lovely page</h1></div>
-	<div class="section" id="section3"><h1>One Image = One thousand words</h1></div>
+	<div class="section" id="section1">
+		<div class="slide" id="slide1">
+			<h2>Page One</h2>
+			<img src="img/bg2.jpg" alt=""/>
+		</div>
+		<div class="slide" id="slide2">
+			<h2>Page One</h2>
+			<img src="img/bg3.jpg" alt=""/>
+		</div>
+		<div class="slide" id="slide3">
+			<h2>Page One</h2>
+			<img src="img/bg4.jpg" alt=""/>
+		</div>
+	</div>
+	<div class="section" id="section2">
+		<h2>Page Two</h2>
+		<img src="img/bg5.jpg" alt=""/>
+	</div>
+	<div class="section" id="section3">
+		<h2>Page Three</h2>
+		<img src="img/bg6.jpg" alt=""/>
+	</div>
 </div>
 
 <!-- End of body async scripts -->
