--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0" />
-  <title>Brunch Cocktails</title>
+  <title>Project Big Book</title>
 
 	<link rel="stylesheet" href="css/app.css" />
 	<link rel="stylesheet" href="css/libs/jquery.fullpage.css" />
@@ -25,29 +25,29 @@
 <div id="fullpage">
 	<div class="section " id="section0">
 		<h1>Project Big Book</h1>
-		<img src="img/bg1.jpg" alt=""/>
+		<img data-src="img/bg1.jpg" alt=""/>
 	</div>
 	<div class="section" id="section1">
 		<div class="slide" id="slide1">
 			<h2>Page One</h2>
-			<img src="img/bg2.jpg" alt=""/>
+			<img data-src="img/bg2.jpg" alt=""/>
 		</div>
 		<div class="slide" id="slide2">
 			<h2>Page One</h2>
-			<img src="img/bg3.jpg" alt=""/>
+			<img data-src="img/bg3.jpg" alt=""/>
 		</div>
 		<div class="slide" id="slide3">
 			<h2>Page One</h2>
-			<img src="img/bg4.jpg" alt=""/>
+			<img data-src="img/bg4.jpg" alt=""/>
 		</div>
 	</div>
 	<div class="section" id="section2">
 		<h2>Page Two</h2>
-		<img src="img/bg5.jpg" alt=""/>
+		<img data-src="img/bg5.jpg" alt=""/>
 	</div>
 	<div class="section" id="section3">
 		<h2>Page Three</h2>
-		<img src="img/bg6.jpg" alt=""/>
+		<img data-src="img/bg6.jpg" alt=""/>
 	</div>
 </div>
 
@@ -56,6 +56,7 @@
   <script src="js/vendor.js"></script>
   <script src="js/app.js" onload="require('initialize');"></script>
   <script src="js/app.js" onload="require('js/scripts');"></script>
+  <script src="js/app.js" onload="require('libs/unveil.js/jquery.unveil');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/dist/jquery.fullpage');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/vendors/scrolloverflow');"></script>
 
