--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -25,29 +25,38 @@
 <div id="fullpage">
 	<div class="section " id="section0">
 		<h1>Project Big Book</h1>
-		<img data-src="img/bg1.jpg" alt=""/>
+		<img id="1" data-src="img/bg1.jpg" alt=""/>
+		<a href="#" data-featherlight="#1"><img data-src="img/bg1.jpg" alt=""/></a>
 	</div>
+
 	<div class="section" id="section1">
 		<div class="slide" id="slide1">
 			<h2>Page One</h2>
-			<img data-src="img/bg2.jpg" alt=""/>
+			<img id="2" data-src="img/bg1.jpg" alt=""/>
+			<a href="#" data-featherlight="#2"><img data-src="img/bg2.jpg" alt=""/></a>
 		</div>
 		<div class="slide" id="slide2">
 			<h2>Page One</h2>
-			<img data-src="img/bg3.jpg" alt=""/>
+			<img id="3" data-src="img/bg3.jpg" alt=""/>
+			<a href="#" data-featherlight="#3"><img data-src="img/bg3.jpg" alt=""/></a>
 		</div>
 		<div class="slide" id="slide3">
 			<h2>Page One</h2>
-			<img data-src="img/bg4.jpg" alt=""/>
+			<img id="4" data-src="img/bg4.jpg" alt=""/>
+			<a href="#" data-featherlight="#4"><img data-src="img/bg4.jpg" alt=""/></a>
 		</div>
 	</div>
+
 	<div class="section" id="section2">
 		<h2>Page Two</h2>
-		<img data-src="img/bg3.jpg" alt=""/>
+		<img id="5" data-src="img/bg3.jpg" alt=""/>
+		<a href="#" data-featherlight="#5"><img data-src="img/bg3.jpg" alt=""/></a>
 	</div>
+
 	<div class="section" id="section3">
 		<h2>Page Three</h2>
-		<img data-src="img/bg4.jpg" alt=""/>
+		<img id="6" data-src="img/bg4.jpg" alt=""/>
+		<a href="#" data-featherlight="#6"><img data-src="img/bg4.jpg" alt=""/></a>
 	</div>
 </div>
 
@@ -59,6 +68,7 @@
   <script src="js/app.js" onload="require('libs/unveil.js/jquery.unveil');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/dist/jquery.fullpage');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/vendors/scrolloverflow');"></script>
+  <script src="js/app.js" onload="require('libs/featherlight/featherlight');"></script>
 
 </body>
 </html>
