--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -27,25 +27,53 @@
 		<h1>Project Big Book</h1>
 		<img data-src="img/bg1.jpg" alt=""/>
 	</div>
-	<div class="section" id="section1">
-		<div class="slide" id="slide1">
+
+	<div class="section">
+		<div class="slide">
 			<h2>Page One</h2>
 			<img data-src="img/bg2.jpg" alt=""/>
 		</div>
-		<div class="slide" id="slide2">
+		<div class="slide">
 			<h2>Page One</h2>
 			<img data-src="img/bg3.jpg" alt=""/>
 		</div>
-		<div class="slide" id="slide3">
+		<div class="slide">
 			<h2>Page One</h2>
 			<img data-src="img/bg4.jpg" alt=""/>
 		</div>
 	</div>
-	<div class="section" id="section2">
+
+	<div class="section">
 		<h2>Page Two</h2>
 		<img data-src="img/bg3.jpg" alt=""/>
 	</div>
-	<div class="section" id="section3">
+
+	<div class="section">
+		<h2>Page Three</h2>
+		<img data-src="img/bg4.jpg" alt=""/>
+	</div>
+
+	<div class="section">
+		<h2>Page Two</h2>
+		<img data-src="img/bg3.jpg" alt=""/>
+	</div>
+
+	<div class="section">
+		<div class="slide">
+			<h2>Page One</h2>
+			<img data-src="img/bg2.jpg" alt=""/>
+		</div>
+		<div class="slide">
+			<h2>Page One</h2>
+			<img data-src="img/bg3.jpg" alt=""/>
+		</div>
+		<div class="slide">
+			<h2>Page One</h2>
+			<img data-src="img/bg4.jpg" alt=""/>
+		</div>
+	</div>
+
+	<div class="section">
 		<h2>Page Three</h2>
 		<img data-src="img/bg4.jpg" alt=""/>
 	</div>
@@ -56,6 +84,7 @@
   <script src="js/vendor.js"></script>
   <script src="js/app.js" onload="require('initialize');"></script>
   <script src="js/app.js" onload="require('js/scripts');"></script>
+  <script src="js/app.js" onload="require('js/fullPageScroll');"></script>
   <script src="js/app.js" onload="require('libs/unveil.js/jquery.unveil');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/dist/jquery.fullpage');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/vendors/scrolloverflow');"></script>
