background video styles & functionality

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -23,7 +23,20 @@
 <body>
 
 <div id="fullpage">
-	<div class="section " id="section0">
+
+	<div class="section" id="hero">
+		<div class="video-wrapper">
+			<video autoplay muted loop poster="img/bg1.jpg" id="bgvid">
+				<source src="video/hero.mp4" type="video/mp4">
+				<source src="video/hero.webm" type="video/webm">
+				<source src="video/hero.ogv" type="video/ogg" />
+			</video>
+			<div class="tinter"></div>
+			<h1>Project<br/><span>Big Book</span></h1>
+		</div>
+	</div>
+
+	<div class="section">
 		<h1>Project Big Book</h1>
 		<img data-src="img/bg1.jpg" alt=""/>
 	</div>
@@ -54,21 +67,21 @@
 	</div>
 
 	<div class="section">
-		<h2>Page Two</h2>
+		<h2>Page Four</h2>
 		<img data-src="img/bg3.jpg" alt=""/>
 	</div>
 
 	<div class="section">
 		<div class="slide">
-			<h2>Page One</h2>
+			<h2>Page Five</h2>
 			<img data-src="img/bg2.jpg" alt=""/>
 		</div>
 		<div class="slide">
-			<h2>Page One</h2>
+			<h2>Page Five</h2>
 			<img data-src="img/bg3.jpg" alt=""/>
 		</div>
 		<div class="slide">
-			<h2>Page One</h2>
+			<h2>Page Five</h2>
 			<img data-src="img/bg4.jpg" alt=""/>
 		</div>
 	</div>
