--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -87,7 +87,7 @@
 	</div>
 
 	<div class="section">
-		<h2>Page Three</h2>
+		<h2>Page Six</h2>
 		<img data-src="img/bg4.jpg" alt=""/>
 	</div>
 </div>
