--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -22,81 +22,108 @@
 </head>
 <body>
 
-<div id="fullpage">
-
-	<div class="section" id="hero">
-		<div class="video-wrapper">
-			<video autoplay muted loop poster="img/bg1.jpg" id="bgvid">
-				<source src="video/hero.mp4" type="video/mp4">
-				<source src="video/hero.webm" type="video/webm">
-				<source src="video/hero.ogv" type="video/ogg" />
-			</video>
-			<div class="tinter"></div>
-			<h1>Project<br/><span>Big Book</span></h1>
-		</div>
-	</div>
-
-	<div class="section">
-		<h1>Project Big Book</h1>
-		<img data-src="img/bg1.jpg" alt=""/>
-	</div>
-
-	<div class="section">
-		<div class="slide">
-			<h2>Page One</h2>
-			<img data-src="img/bg2.jpg" alt=""/>
-		</div>
-		<div class="slide">
-			<h2>Page One</h2>
-			<img data-src="img/bg3.jpg" alt=""/>
-		</div>
-		<div class="slide">
-			<h2>Page One</h2>
-			<img data-src="img/bg4.jpg" alt=""/>
-		</div>
-	</div>
-
-	<div class="section">
-		<h2>Page Two</h2>
-		<img data-src="img/bg3.jpg" alt=""/>
-	</div>
-
-	<div class="section">
-		<h2>Page Three</h2>
-		<img data-src="img/bg4.jpg" alt=""/>
-	</div>
-
-	<div class="section">
-		<h2>Page Four</h2>
-		<img data-src="img/bg3.jpg" alt=""/>
-	</div>
-
-	<div class="section">
-		<div class="slide">
-			<h2>Page Five</h2>
-			<img data-src="img/bg2.jpg" alt=""/>
-		</div>
-		<div class="slide">
-			<h2>Page Five</h2>
-			<img data-src="img/bg3.jpg" alt=""/>
-		</div>
-		<div class="slide">
-			<h2>Page Five</h2>
-			<img data-src="img/bg4.jpg" alt=""/>
-		</div>
-	</div>
-
-	<div class="section">
-		<h2>Page Six</h2>
-		<img data-src="img/bg4.jpg" alt=""/>
-	</div>
+<div class ="menu">
+	<nav class="nav">
+		<a href="index.html">Home</a>
+		<a href="">Chapters</a>
+		<a href="">Pages</a>
+		<a href="">Books</a>
+		<a href="">About</a>
+	</nav>
 </div>
+
+<section class="main">
+	<div class="main-header">
+		<div class="header-bar">
+			<a class="open-menu">
+				<div class="hamburger">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</a>
+		</div>
+	</div>
+
+	<div id="fullpage">
+
+		<div class="section" id="hero">
+			<div class="video-wrapper">
+				<video autoplay muted loop poster="img/bg1.jpg" id="bgvid">
+					<source src="video/hero.mp4" type="video/mp4">
+					<source src="video/hero.webm" type="video/webm">
+					<source src="video/hero.ogv" type="video/ogg" />
+				</video>
+				<div class="tinter"></div>
+				<h1>Project<br/><span>Big Book</span></h1>
+			</div>
+		</div>
+
+		<div class="section">
+			<h2>Project Big Book</h2>
+			<img data-src="img/bg1.jpg" alt=""/>
+		</div>
+
+		<div class="section">
+			<div class="slide">
+				<h2>Page One</h2>
+				<img data-src="img/bg2.jpg" alt=""/>
+			</div>
+			<div class="slide">
+				<h2>Page One</h2>
+				<img data-src="img/bg3.jpg" alt=""/>
+			</div>
+			<div class="slide">
+				<h2>Page One</h2>
+				<img data-src="img/bg4.jpg" alt=""/>
+			</div>
+		</div>
+
+		<div class="section">
+			<h2>Page Two</h2>
+			<img data-src="img/bg3.jpg" alt=""/>
+		</div>
+
+		<div class="section">
+			<h2>Page Three</h2>
+			<img data-src="img/bg4.jpg" alt=""/>
+		</div>
+
+		<div class="section">
+			<h2>Page Four</h2>
+			<img data-src="img/bg3.jpg" alt=""/>
+		</div>
+
+		<div class="section">
+			<div class="slide">
+				<h2>Page Five</h2>
+				<img data-src="img/bg2.jpg" alt=""/>
+			</div>
+			<div class="slide">
+				<h2>Page Five</h2>
+				<img data-src="img/bg3.jpg" alt=""/>
+			</div>
+			<div class="slide">
+				<h2>Page Five</h2>
+				<img data-src="img/bg4.jpg" alt=""/>
+			</div>
+		</div>
+
+		<div class="section">
+			<h2>Page Six</h2>
+			<img data-src="img/bg4.jpg" alt=""/>
+		</div>
+	</div>
+
+</section>
+
+
 
 <!-- End of body async scripts -->
 
   <script src="js/vendor.js"></script>
   <script src="js/app.js" onload="require('initialize');"></script>
-  <script src="js/app.js" onload="require('js/scripts');"></script>
+  <script src="js/app.js" onload="require('js/navigation');"></script>
   <script src="js/app.js" onload="require('js/fullPageScroll');"></script>
   <script src="js/app.js" onload="require('libs/unveil.js/jquery.unveil');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/dist/jquery.fullpage');"></script>
