lightbox styles + markup

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -43,13 +43,7 @@
 				</div>
 			</a>
 		</div>
-<div id="fullpage">
-	<div class="section " id="section0">
-		<h1>Project Big Book</h1>
-		<img id="1" data-src="img/bg1.jpg" alt=""/>
-		<a href="#" data-featherlight="#1"><img data-src="img/bg1.jpg" alt=""/></a>
 	</div>
-
 	<div id="fullpage">
 
 		<div class="section" id="hero">
@@ -62,38 +56,74 @@
 				<div class="tinter"></div>
 				<h1>Project<br/><span>Big Book</span></h1>
 			</div>
-
-	<div class="section" id="section1">
-		<div class="slide" id="slide1">
-			<h2>Page One</h2>
-			<img id="2" data-src="img/bg1.jpg" alt=""/>
-			<a href="#" data-featherlight="#2"><img data-src="img/bg2.jpg" alt=""/></a>
 		</div>
-		<div class="slide" id="slide2">
-			<h2>Page One</h2>
-			<img id="3" data-src="img/bg3.jpg" alt=""/>
-			<a href="#" data-featherlight="#3"><img data-src="img/bg3.jpg" alt=""/></a>
+
+		<div class="section">
+			<h2>Project Big Book</h2>
+			<img id="1" data-src="img/bg1.jpg" alt=""/>
+			<a href="#" data-featherlight="#1"><img data-src="img/bg1.jpg" alt=""/></a>
 		</div>
-		<div class="slide" id="slide3">
-			<h2>Page One</h2>
-			<img id="4" data-src="img/bg4.jpg" alt=""/>
-			<a href="#" data-featherlight="#4"><img data-src="img/bg4.jpg" alt=""/></a>
+
+		<div class="section">
+			<div class="slide">
+				<h2>Page One</h2>
+				<img id="1a" data-src="img/bg1.jpg" alt=""/>
+				<a href="#" data-featherlight="#1a"><img data-src="img/bg2.jpg" alt=""/></a>
+			</div>
+			<div class="slide">
+				<h2>Page One</h2>
+				<img id="1b" data-src="img/bg3.jpg" alt=""/>
+				<a href="#" data-featherlight="#1b"><img data-src="img/bg3.jpg" alt=""/></a>
+			</div>
+			<div class="slide">
+				<h2>Page One</h2>
+				<img id="1c" data-src="img/bg4.jpg" alt=""/>
+				<a href="#" data-featherlight="#1c"><img data-src="img/bg4.jpg" alt=""/></a>
+			</div>
 		</div>
-	</div>
 
-	<div class="section" id="section2">
-		<h2>Page Two</h2>
-		<img id="5" data-src="img/bg3.jpg" alt=""/>
-		<a href="#" data-featherlight="#5"><img data-src="img/bg3.jpg" alt=""/></a>
-	</div>
+		<div class="section">
+			<h2>Page Two</h2>
+			<img id="5" data-src="img/bg3.jpg" alt=""/>
+			<a href="#" data-featherlight="#5"><img data-src="img/bg3.jpg" alt=""/></a>
+		</div>
 
-	<div class="section" id="section3">
-		<h2>Page Three</h2>
-		<img id="6" data-src="img/bg4.jpg" alt=""/>
-		<a href="#" data-featherlight="#6"><img data-src="img/bg4.jpg" alt=""/></a>
-	</div>
-</div>
+		<div class="section">
+			<div class="slide">
+				<h2>Page Three</h2>
+				<img id="3a" data-src="img/bg1.jpg" alt=""/>
+				<a href="#" data-featherlight="#3a"><img data-src="img/bg2.jpg" alt=""/></a>
+			</div>
+			<div class="slide">
+				<h2>Page One</h2>
+				<img id="3b" data-src="img/bg3.jpg" alt=""/>
+				<a href="#" data-featherlight="#3b"><img data-src="img/bg3.jpg" alt=""/></a>
+			</div>
+			<div class="slide">
+				<h2>Page One</h2>
+				<img id="3c" data-src="img/bg4.jpg" alt=""/>
+				<a href="#" data-featherlight="#3c"><img data-src="img/bg4.jpg" alt=""/></a>
+			</div>
+			<div class="slide">
+				<h2>Page One</h2>
+				<img id="3d" data-src="img/bg1.jpg" alt=""/>
+				<a href="#" data-featherlight="#3d"><img data-src="img/bg1.jpg" alt=""/></a>
+			</div>
+		</div>
 
+		<div class="section">
+			<h2>Page Four</h2>
+			<img id="7" data-src="img/bg3.jpg" alt=""/>
+			<a href="#" data-featherlight="#7"><img data-src="img/bg3.jpg" alt=""/></a>
+		</div>
+
+		<div class="section">
+			<h2>Page Five</h2>
+			<img id="8" data-src="img/bg4.jpg" alt=""/>
+			<a href="#" data-featherlight="#8"><img data-src="img/bg4.jpg" alt=""/></a>
+		</div>
+
+	</div>
 </section>
 
 
@@ -107,6 +137,7 @@
   <script src="js/app.js" onload="require('libs/unveil.js/jquery.unveil');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/dist/jquery.fullpage');"></script>
   <script src="js/app.js" onload="require('libs/fullpage.js/vendors/scrolloverflow');"></script>
+  <script src="js/app.js" onload="require('libs/featherlight/featherlight');"></script>
 
 </body>
 </html>
