featherlight img display none before clicked

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -60,24 +60,24 @@
 
 		<div class="section">
 			<h2>Project Big Book</h2>
-			<img id="1" data-src="img/bg1.jpg" alt=""/>
+			<img id="1" class="featherlight-img" data-src="img/bg1.jpg" alt=""/>
 			<a href="#" data-featherlight="#1"><img data-src="img/bg1.jpg" alt=""/></a>
 		</div>
 
 		<div class="section">
 			<div class="slide">
 				<h2>Page One</h2>
-				<img id="1a" data-src="img/bg1.jpg" alt=""/>
+				<img id="1a" class="featherlight-img" data-src="img/bg1.jpg" alt=""/>
 				<a href="#" data-featherlight="#1a"><img data-src="img/bg2.jpg" alt=""/></a>
 			</div>
 			<div class="slide">
 				<h2>Page One</h2>
-				<img id="1b" data-src="img/bg3.jpg" alt=""/>
+				<img id="1b" class="featherlight-img" data-src="img/bg3.jpg" alt=""/>
 				<a href="#" data-featherlight="#1b"><img data-src="img/bg3.jpg" alt=""/></a>
 			</div>
 			<div class="slide">
 				<h2>Page One</h2>
-				<img id="1c" data-src="img/bg4.jpg" alt=""/>
+				<img id="1c" class="featherlight-img" data-src="img/bg4.jpg" alt=""/>
 				<a href="#" data-featherlight="#1c"><img data-src="img/bg4.jpg" alt=""/></a>
 			</div>
 		</div>
@@ -91,35 +91,35 @@
 		<div class="section">
 			<div class="slide">
 				<h2>Page Three</h2>
-				<img id="3a" data-src="img/bg1.jpg" alt=""/>
+				<img id="3a" class="featherlight-img" data-src="img/bg1.jpg" alt=""/>
 				<a href="#" data-featherlight="#3a"><img data-src="img/bg2.jpg" alt=""/></a>
 			</div>
 			<div class="slide">
 				<h2>Page One</h2>
-				<img id="3b" data-src="img/bg3.jpg" alt=""/>
+				<img id="3b" class="featherlight-img" data-src="img/bg3.jpg" alt=""/>
 				<a href="#" data-featherlight="#3b"><img data-src="img/bg3.jpg" alt=""/></a>
 			</div>
 			<div class="slide">
 				<h2>Page One</h2>
-				<img id="3c" data-src="img/bg4.jpg" alt=""/>
+				<img id="3c" class="featherlight-img" data-src="img/bg4.jpg" alt=""/>
 				<a href="#" data-featherlight="#3c"><img data-src="img/bg4.jpg" alt=""/></a>
 			</div>
 			<div class="slide">
 				<h2>Page One</h2>
-				<img id="3d" data-src="img/bg1.jpg" alt=""/>
+				<img id="3d" class="featherlight-img" data-src="img/bg1.jpg" alt=""/>
 				<a href="#" data-featherlight="#3d"><img data-src="img/bg1.jpg" alt=""/></a>
 			</div>
 		</div>
 
 		<div class="section">
 			<h2>Page Four</h2>
-			<img id="7" data-src="img/bg3.jpg" alt=""/>
+			<img id="7" class="featherlight-img" data-src="img/bg3.jpg" alt=""/>
 			<a href="#" data-featherlight="#7"><img data-src="img/bg3.jpg" alt=""/></a>
 		</div>
 
 		<div class="section">
 			<h2>Page Five</h2>
-			<img id="8" data-src="img/bg4.jpg" alt=""/>
+			<img id="8" class="featherlight-img" data-src="img/bg4.jpg" alt=""/>
 			<a href="#" data-featherlight="#8"><img data-src="img/bg4.jpg" alt=""/></a>
 		</div>
 
